@@ -8,3 +8,6 @@
 - Added All Star Tuesdays
 [B]2.0.4[/B]
 - Updated URL for All Star Tuesdays and Old School
+- Added Members TYT Live
+- Added Members Specials
+- Changed username in config to user-email, as people were getting confused with login info
